Fix jumping navigator buttons

--- a/dev/components/body.scss
+++ b/dev/components/body.scss
@@ -1,5 +1,4 @@
 .body {
     @extend %layout-base;
-    padding: $padding-l;
     margin: 0;
 }
