--- a/dev/components/footer.scss
+++ b/dev/components/footer.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   grid-column: 3 / 15;
   grid-row: 7;
+  margin-bottom: $margin-xl;
   padding-top: $padding-s;
   border-top: $border-tiny;
 }
