--- a/dev/components/services.scss
+++ b/dev/components/services.scss
@@ -36,6 +36,7 @@
 .services-name {
   @include font-roboto-500-xs(black);
   margin-bottom: $margin-m;
+  margin-top: 0;
 }
 
 .services-description {
